# termbot

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  termbot.py
context/: create_linkedin_post  german.md  improved_linkedin_prompt  new_linkedin_post  pull_key_ideas  sample_cybersecurity_analyst  sample_joke  spanish.txt  summarize_cti_feeds  threat_report
modules/: termbot_banner.py  termbot_data.py
