[tool.poetry]
name = "termbot"
version = "0.1.0"
description = ""
authors = ["Argandov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.13.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
tiktoken = "^0.6.0"
groq = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
